--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-<h1>Testing!!!!!!!!!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Creating Text Content with HTML</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="heading">
+      <h1>Is this the $200,000 ticket to cheating death?</h1>
+      <p class="date">2025/01/16</p>
+      <p class="autor">Charlotte Lytton</p>
+    </div>
+    <img src="asigment.jpg" alt="getty_image" />
+
+    <div class="headlines">
+      <p>
+        A German cryonics start-up is offering a chance at a second life for the
+        cost of a sports car. Is cryogenics within reach, or still an empty
+        promise?
+      </p>
+    </div>
+
+    <div class="content1">
+      <p>
+        The ambulance parked up by a green in central Berlin is small, almost
+        toy-like; a thick orange stripe across its sides, a tangle of wires
+        looping from the ceiling. </p>
+
+        <p>It is one of three retrofitted and operated by
+            <a href="https://www.tomorrow.bio/">Tomorrow.Bio</a>, Europe's first cryonics lab, whose mission is to freeze
+            patients after death, and one day bring them back to life, all for a
+            cost of $200,000 (£165,000).</p>
+
+            <p>At the perfusion pump is Emil Kendziorra,
+                Tomorrow.Bio's co-founder and a former cancer researcher who switched
+                careers after finding progress in curing the disease "way too slow".
+                While the world's first cryonics lab opened in Michigan <a href="https://cryonics.org/">almost half a
+                    century ago</a>  – triggering an enduring split between those who believe it
+                is the future of humanity, and others who dismiss it as a non-starter –
+                Kendziorra says that appetite is building.</p>
+
+                <p>So far they have frozen (or
+                    cryopreserved) "three or four" people and five pets, with almost 700
+                    more signed up. During 2025 they will expand their operations to cover
+                    the whole of the US.</p>
+
+                    <p> No one has ever been successfully revived following
+                        cryopreservation, and, even if they were, the potential result could be
+                        coming back to life severely brain damaged. That there is currently no
+                        proof that organisms with brain structures as complex as humans' can
+                        successfully be restored exposes the concept as "preposterous", says
+                        Clive Coen, professor of neuroscience at King's College London. He sees
+                        pronouncements that nanotechnology (carrying out elements of the process
+                        on a nano scale) or connectomics (mapping the brain's neurons) will
+                        bridge the current gap between theoretical biology and reality as
+                        overpromises, too.</p>
+          
+    </div>
+    <img
+      src="image.jpg"
+      alt="The start-up's ambulance is where the cryonics procedure begins after the patient has been declared dead (Credit: Charlotte Lytton)"
+    />
+    <p class="second">
+      The start-up's ambulance is where the cryonics procedure begins after the
+      patient has been declared dead (Credit: Charlotte Lytton)
+    </p>
+
+    <div class="content2">
+      <p>
+        Such criticisms have not blunted Tomorrow.Bio's ambitions. Once a
+        patient has signed up with the firm and a doctor confirms they are
+        within the final days of their life, the company dispatches an ambulance
+        to their location. When legally pronounced dead, the patient is moved to
+        Tomorrow.Bio's ambulance, where the cryonics procedure begins. The
+        start-up has been motivated by patients whose hearts have stopped in
+        freezing temperatures and then later been restarted again. One example
+        was <a href="https://www.bbc.co.uk/programmes/p00b79zq">Anna Bagenholm</a> , who in 1999 spent two hours clinically dead during a
+        ski holiday in Norway, but was later revived. 
+      </p>
+
+      <p>During the procedure, the
+        bodies are cooled down to sub-zero temperatures, and supplied with
+        cryoprotective fluid.
+        cryonics.</p>
+        <blockquote>
+            "Once you go under zero degrees, you don't want to
+            freeze the body, you want to cryopreserve it. Otherwise, you would have
+            ice crystals everywhere, and the tissue would get destroyed," says
+            Kendziorra, whose firm works both in practical and research areas ofcryonics.
+        </blockquote>
+    </div>
+  </body>
+</html>
